Wizard and ghost overlapping issue solved

--- a/css/game.css
+++ b/css/game.css
@@ -79,6 +79,9 @@ footer {
 
 .wizard-div {
     margin-top: auto;
+    z-index: 0;
+    position: fixed;
+    left: 1300px;
     /* padding-top: 10px; */
     /* margin-right: 10px; */
 }
@@ -89,6 +92,11 @@ footer {
     gap: 20px;
 }
 
+.ghost1{
+    position: absolute;
+    z-index: 2;
+    top: 0px;
+}
 
 /* #ghost1 {
     padding-left: 10px;
